<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Wallpaper Changer</string>
    <string name="create_shortcut">Create Wallpaper Changer Shortcut</string>
    <string name="btn_select">Apply</string>
    <string name="btn_test">Preview</string>
    <string name="btn_cancel">Cancel</string>
    <string name="s_rotate">Rotate</string>
    <string name="s_create">Create</string>
    <string name="s_error">Error</string>
    <string name="s_shortcut">Shortcut</string>
    <string name="s_downloading">Downloading</string>
    <string name="s_disabled">disabled</string>
    <string name="s_wallpaper">Wallpaper</string>
    <string name="s_updated">Wallpaper Updated!</string>
    <string name="s_invalid">Invalid Image!</string>
    <string name="s_zipcode">Location</string>
    <string name="s_creating_base">Creating Base Image using Current Wallpaper...</string>
    <string name="btn_current">Current</string>
    <string name="btn_undo">Revert</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="s_select_base">Select Base Image</string>
    <string name="btn_gallery">Pictures</string>
    <string name="btn_online">Online</string>
    <string name="btn_url">URL</string>
    <string name="lbl_overlay">Select Widget</string>
    <string name="btn_weather">Weather</string>
    <string name="lbl_command">Select Command</string>
    <string name="btn_stocks">Stocks</string>
    <string name="btn_recent">Recent</string>
    <string name="s_updating_options">Updating Options. Please wait.</string>
    <string name="btn_zip">Zip Code</string>
    <string name="btn_gps">GPS</string>
    <string name="s_uploading">Uploading</string>
    <string name="s_low_quality">WIFI disabled. Using low quality.</string>
    <string name="local_storage_provider_external_label">External storage (SD card)</string>
    <string name="local_storage_provider_internal_label">Regular internal storage</string>
    <string name="local_storage_provider_samsunggalaxy_label">%1$s additional internal storage</string>
    <string name="local_storage_provider_label">Storage location</string>
    <string-array name="picker_sort_options">
        <item>Downloads</item>
        <item>Rating</item>
        <item>Date Added</item>
    </string-array>
    <string name="picker_sort_prompt">Sort Options</string>
    <string name="menu_settings">Settings</string>
    <string name="pref_allow">Send Usage Stats</string>
    <string name="pref_user">User name</string>
    <string name="pref_pass">Password</string>
    <string name="pref_allow_long">Allow usage statistics collection</string>
    <string name="s_help_1">WallChanger is your basic Wallpaper Manager.</string>
    <string name="s_help_4">You are now ready to go! You can test the outcome of the operation, or send it staight to your Home screen!</string>
    <string name="s_help_3">Next select your widget options. Currently, only weather is available, but there are more to come. If you have a GPS-enabled phone, you can automatically select your exact location. Otherwise, please enter your zip code.</string>
    <string name="s_help_2">The first step is to select a base image for your wallpaper. You can use your current wallpaper, import any image from your gallery, or select from an Online gallery of the best wallpapers on the internet!</string>
    <string name="s_rating">Rating</string>
    <string name="s_feedback">Feedback</string>
    <string name="s_name">Your name</string>
    <string name="s_anonymous">Anonymous</string>
    <string name="btn_send">Send</string>
    <string name="s_thanks">Thank you!</string>
    <string name="menu_refresh">Refresh</string>
    <string name="s_adding">Adding</string>
    <string name="s_widgets">Widget</string>
    <string name="widget_position_prompt">Widget Position</string>
    <string-array name="widget_position_array">
        <item>Top Left</item>
        <item>Top Center</item>
        <item>Top Right</item>
        <item>Middle Left</item>
        <item>Middle Center</item>
        <item>Middle Right</item>
        <item>Bottom Left</item>
        <item>Bottom Center</item>
        <item>Bottom Right</item>
    </string-array>
    <string name="pos_tl">Top Left</string>
    <string name="pos_tc">T. Center</string>
    <string name="pos_tr">T. Right</string>
    <string name="pos_ml">Middle Left</string>
    <string name="pos_mc">M. Center</string>
    <string name="pos_mr">M. Right</string>
    <string name="pos_bl">Bottom Left</string>
    <string name="pos_bc">B. Center</string>
    <string name="pos_br">B. Right</string>
    <string name="s_position">Position</string>
    <string name="s_recent">Recent</string>
    <string name="pref_resize">Base Image Resize Policy</string>
    <string name="pref_resize_center">Center</string>
    <string name="pref_resize_fit">Fit</string>
    <string name="pref_resize_stretch">Stretch</string>
    <string name="pref_resize_fill">Fill</string>
    <string name="pref_resize_tile">Tile</string>
    <string-array name="pref_resize_options">
        <item>Center</item>
        <item>Fit</item>
        <item>Stretch</item>
        <item>Fill</item>
        <item>Tile</item>
    </string-array>
</resources>
