<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item android:id="@+id/menu_select"
		android:title="@string/btn_select"
		android:icon="@drawable/icon"
		/>
		
	<item android:id="@+id/menu_test"
		android:title="@string/btn_test"
		android:icon="@drawable/menu_search"
		/>
		
	<item android:id="@+id/menu_current"
		android:title="@string/btn_current"
		android:icon="@drawable/ic_menu_phone"
		/>
		
	<item android:id="@+id/menu_about"
		android:title="@string/menu_about"
		android:icon="@drawable/menu_info"
		/>
		
	<item android:id="@+id/menu_undo"
		android:title="@string/btn_undo"
		android:icon="@drawable/ic_menu_stop"
		/>
		
    <item android:id="@+id/menu_help"
    	android:title="@string/menu_help"
    	android:icon="@drawable/menu_help"
    	/>

</menu>
