<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center|top" android:id="@+id/layoutMain"
	android:isScrollContainer="true">
	<ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:layout_alignParentTop="true" android:layout_above="@+id/adLayout"
		android:id="@+id/scrollView1">
	<LinearLayout android:layout_width="fill_parent"
		android:id="@+id/linearLayout4" android:layout_height="fill_parent"
		android:orientation="vertical">
		<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
			android:layout_width="fill_parent" android:text="@string/s_select_base"></TextView>
		<LinearLayout android:paddingLeft="1pt"
			android:layout_height="wrap_content" android:id="@+id/linearLayout1"
			android:scrollbarAlwaysDrawHorizontalTrack="true"
			android:layout_width="fill_parent">
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/btn_current"
				android:id="@+id/btnCurrent"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/btn_gallery"
				android:id="@+id/btnGallery"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/btn_online"
				android:id="@+id/btnOnline"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:soundEffectsEnabled="true"
				android:text="@string/btn_url" android:id="@+id/btnURL"></Button>
		</LinearLayout>
		<EditText android:text="EditText" android:layout_height="wrap_content"
			android:id="@+id/txtURL" android:layout_width="fill_parent"
			android:singleLine="true"></EditText>
		<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
			android:layout_width="fill_parent" android:text="@string/lbl_overlay"></TextView>
		<LinearLayout android:paddingLeft="1pt"
			android:layout_width="fill_parent" android:gravity="bottom|top"
			android:id="@+id/linearLayout2" android:layout_height="wrap_content">
			<CheckBox android:layout_height="wrap_content"
				android:soundEffectsEnabled="true" android:layout_width="wrap_content"
				android:layout_marginRight="10dip" android:id="@+id/btnWeather"
				android:enabled="true" android:checked="true" android:text="@string/btn_weather"></CheckBox>
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:visibility="gone"
				android:text="@string/btn_stocks" android:id="@+id/btnStocks"></Button>
			<EditText android:layout_height="wrap_content"
				android:layout_width="100dip" android:id="@+id/txtZip"
				android:enabled="true" android:text="90210"></EditText>
			<CheckBox android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/btnGPS"
				android:visibility="gone" android:checked="true" android:text="@string/btn_gps"></CheckBox>
		</LinearLayout>
		<TextView android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/textView3" android:text="@string/lbl_command"></TextView>
		<LinearLayout android:paddingLeft="1pt"
			android:layout_width="fill_parent" android:id="@+id/linearLayout3"
			android:layout_height="wrap_content">
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/btn_select"
				android:id="@+id/btnSelect"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/btn_test"
				android:id="@+id/btnTest"></Button>
			<Button android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:text="@string/btn_undo"
				android:id="@+id/btnUndo"></Button>
			<ProgressBar android:layout_height="wrap_content"
				android:id="@+id/progressBar1" android:layout_width="wrap_content"></ProgressBar>
		</LinearLayout>
		<FrameLayout android:layout_width="fill_parent"
			android:id="@+id/frameLayout1" android:foregroundGravity="center"
			android:layout_height="wrap_content">
			<ImageView android:src="@drawable/picture"
				android:layout_height="wrap_content" android:layout_width="fill_parent"
				android:id="@+id/imageSample"></ImageView>
		</FrameLayout>
	</LinearLayout>
	</ScrollView>
	<LinearLayout android:layout_alignParentBottom="true"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:id="@+id/adLayout" android:minHeight="50dip"></LinearLayout>
</RelativeLayout>