<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:gravity="center|top" android:id="@+id/layoutMain"
	android:isScrollContainer="true">
	<LinearLayout android:layout_alignParentTop="true"
		android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:id="@+id/adLayout" />
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_below="@+id/adLayout"
		android:id="@+id/scrollView1">
		<LinearLayout android:layout_width="fill_parent"
			android:id="@+id/linearLayout4" android:layout_height="fill_parent"
			android:orientation="vertical">
			<TextView android:layout_height="wrap_content" android:id="@+id/textView1"
				android:layout_width="fill_parent" android:text="@string/s_select_base"></TextView>
			<LinearLayout android:paddingLeft="1pt"
				android:layout_height="wrap_content" android:id="@+id/linearLayout1"
				android:scrollbarAlwaysDrawHorizontalTrack="true"
				android:layout_width="fill_parent">
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/btn_current"
					android:id="@+id/btnCurrent"></Button>
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/btn_gallery"
					android:id="@+id/btnGallery"></Button>
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/btn_online"
					android:id="@+id/btnOnline"></Button>
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:soundEffectsEnabled="true"
					android:text="@string/btn_url" android:id="@+id/btnURL"></Button>
			</LinearLayout>
			<EditText android:layout_height="wrap_content"
				android:id="@+id/txtURL" android:layout_width="fill_parent"
				android:singleLine="true"></EditText>
			<TextView android:layout_height="wrap_content" android:id="@+id/textView2"
				android:layout_width="fill_parent" android:text="@string/lbl_overlay"></TextView>
	<LinearLayout android:paddingLeft="1pt"
		android:layout_width="fill_parent" android:gravity="bottom|top"
		android:id="@+id/linearLayout2" android:layout_height="wrap_content">
		<CheckBox android:layout_height="wrap_content"
			android:soundEffectsEnabled="true" android:layout_width="wrap_content"
			android:layout_marginRight="10dip" android:id="@+id/btnWeather"
			android:enabled="true" android:checked="true" android:text="@string/btn_weather"></CheckBox>
		<Button android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:visibility="gone"
			android:text="@string/btn_stocks" android:id="@+id/btnStocks"></Button>
		<EditText android:layout_height="wrap_content" android:id="@+id/txtZip"
			android:enabled="true" android:singleLine="true"
			android:maxWidth="140dip"
			android:layout_width="wrap_content" android:minWidth="100dip"/>
		<CheckBox android:layout_height="wrap_content"
			android:layout_width="wrap_content" android:id="@+id/btnGPS"
			android:text="@string/btn_gps" android:visibility="visible"
			android:checked="false"></CheckBox>
	</LinearLayout>
			<TextView android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/textView3"
				android:text="@string/lbl_command"></TextView>
			<LinearLayout android:paddingLeft="1pt"
				android:layout_width="fill_parent" android:id="@+id/linearLayout3"
				android:layout_height="wrap_content">
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/btn_select"
					android:id="@+id/btnSelect"></Button>
				<Button android:layout_height="wrap_content"
					android:layout_width="wrap_content" android:text="@string/btn_test"
					android:id="@+id/btnTest"></Button>
			</LinearLayout>
			<FrameLayout android:layout_width="fill_parent" android:id="@+id/frameLayout1"
				android:layout_height="wrap_content" android:foregroundGravity="center|top">
				<ImageView android:layout_width="fill_parent" android:id="@+id/imageSample"
					android:layout_height="wrap_content" android:src="@drawable/picture"/>
			</FrameLayout>
		</LinearLayout>
	</ScrollView>
	<RelativeLayout android:id="@+id/progress_layout" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_alignParentBottom="true"
		android:background="@color/translucent_dark">
		<Button android:text="@string/btn_cancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_alignParentRight="true"
			android:id="@+id/progress_cancel"/>
		<TextView android:id="@+id/progress_label" android:layout_alignParentLeft="true"
			android:layout_alignTop="@+id/progress_cancel"
			android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/s_downloading"/>
		<ProgressBar android:id="@+id/progress_progress" android:layout_alignParentLeft="true"
			android:layout_height="wrap_content"
			android:layout_below="@+id/progress_label"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_toLeftOf="@+id/progress_cancel" android:layout_width="fill_parent"/>
	</RelativeLayout>
</RelativeLayout>