<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	<ScrollView android:id="@+id/scrollView1"
		android:layout_alignParentTop="true" android:layout_above="@+id/adLayout"
		android:layout_width="wrap_content" android:layout_height="wrap_content">
		<LinearLayout
			android:padding="10dip"
			android:layout_alignParentTop="true" android:orientation="vertical"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
		    <TextView android:text="@string/s_help_1" android:id="@+id/textView1" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="20dip" android:layout_marginBottom="10dip"></TextView>
		    <TextView android:text="@string/s_help_2" android:id="@+id/textView2" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="20dip" android:layout_marginBottom="10dip"></TextView>
		    <TextView android:text="@string/s_help_3" android:id="@+id/textView3" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="20dip" android:layout_marginBottom="10dip"></TextView>
		    <TextView android:text="@string/s_help_4" android:id="@+id/textView4" android:layout_height="wrap_content" android:layout_width="fill_parent" android:textSize="20dip"></TextView>
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="fill_parent"
		android:id="@+id/adLayout"
		android:layout_alignParentBottom="true" />
</RelativeLayout>